plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '4.0.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'raisetech'
version = '0.0.1-SNAPSHOT'
description = 'StudentManagementSystem'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    // Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // OpenAPI Generator
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    // 便利機能、ユーティリティ
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    //Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MySQLドライバ
    runtimeOnly 'com.mysql:mysql-connector-j'

    // MyBatis
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.0.1'

    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat-runtime'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
